# omt-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  TODO.md  build.rs
docs/: FRAME_BUILDERS.md  FRAME_BUILDER_SUMMARY.md  RESTRUCTURING.md
examples/: list_senders.rs  rebroadcast_bw.rs  send_testcard.rs  settings_example.rs  view_stream.rs
omt/: API_SUMMARY.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LINKS.md  README.md  SUMMARY.md
omt-sys/: Cargo.toml  README.md  build.rs  libomt.h
omt-sys/docs/: METADATA.md
omt/docs/: README.md  unsafe-areas.md  unsafe-code-guidelines.md  unsafe-summary.md
omt/examples/: discovery.rs  rebroadcast_bw.rs  receiver.rs  send_frames.rs  sender.rs  view_stream.rs
omt/src/: codec.rs  discovery.rs  error.rs  frame.rs  frame_builder.rs  lib.rs  receiver.rs  sender.rs  settings.rs  statistics.rs  tally.rs  types.rs
omt/tests/: discovery_safety_tests.rs  frame_builder_tests.rs  memory_safety_tests.rs
src/: audio_frame.rs  discovery.rs  error.rs  ffi.rs  ffi_utils.rs  helpers.rs  lib.rs  media_frame.rs  receiver.rs  sender.rs  settings.rs  types.rs  video_conversion.rs  video_data_format.rs  video_frame.rs
src/types/: address.rs  codec.rs  color_space.rs  frame_rate.rs  frame_type.rs  mod.rs  name.rs  preferred_video_format.rs  quality.rs  receive_flags.rs  sender_info.rs  statistics.rs  tally.rs  video_flags.rs
src/video_conversion/: from_bgra.rs  from_nv12.rs  from_uyva.rs  from_uyvy.rs  from_yuy2.rs  from_yv12.rs  mod.rs  test_utls.rs
tests/: discovery_sender.rs  transfer_testcard.rs
(+19 files in other folders)
