[package]
name = "libomt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust wrapper for libomt"
build = "build.rs"

[lib]
name = "libomt"
path = "src/lib.rs"



[dependencies]
libc = "0.2"
bitflags = "2.6"
log = "0.4"

[dev-dependencies]
viuer = "0.6"
image = "0.24"
env_logger = "0.11"
