[package]
name = "omt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust wrapper for libomt"
build = "build.rs"

[lib]
name = "omt"
path = "src/lib.rs"



[dependencies]
libc = "0.2"
bitflags = "2.10.0"
log = "0.4"
yuv = "0.8.10"
rgb = "0.8.52"
thiserror = "2.0.18"
uuid = { version = "1.11", features = ["v7"] }


[dev-dependencies]
clap = { version = "4.5.57", features = ["derive"] }
viuer = "0.6"
image = "0.24"
env_logger = "0.11"
